# kimagemapeditor

./: .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Messages.sh  NEWS  README  TODO  VERSION  areacreator.cpp  areacreator.h  arealistview.cpp  arealistview.h  configure.in.in  drawzone.cpp  drawzone.h  imagemap.cpp  imagemap.h  imagemapchoosedialog.cpp  imagemapchoosedialog.h  imageslistview.cpp  imageslistview.h  kimagemapeditor.categories  kimagemapeditor.cpp  kimagemapeditor.desktop  kimagemapeditor.h  kimagemapeditor.qrc  kimagemapeditorinterface.h  kimagemapeditorpart.desktop  kimagemapeditorpart.desktop.in  kimagemapeditorpart.json.in  kimagemapeditorpart.qrc  kimagemapeditorpartui.rc  kimagemapeditorui.rc  kimearea.cpp  kimearea.h  kimecommands.cpp  kimecommands.h  (+14 more)
doc/: CMakeLists.txt  index.docbook
pics/: CMakeLists.txt  Makefile.am  sc-apps-kimagemapeditor.svgz
po/ar/: kimagemapeditor.po
po/be/: kimagemapeditor.po
po/bg/: kimagemapeditor.po
po/br/: kimagemapeditor.po
po/bs/: kimagemapeditor.po
po/ca/: kimagemapeditor.po
po/ca/docs/kimagemapeditor/: index.docbook
po/ca@valencia/: kimagemapeditor.po
po/cs/: kimagemapeditor.po
po/cy/: kimagemapeditor.po
po/da/: kimagemapeditor.po
po/de/: kimagemapeditor.po
po/de/docs/kimagemapeditor/: index.docbook
po/el/: kimagemapeditor.po
po/en_GB/: kimagemapeditor.po
po/eo/: kimagemapeditor.po
po/es/: kimagemapeditor.po
po/es/docs/kimagemapeditor/: index.docbook
po/et/: kimagemapeditor.po
po/et/docs/kimagemapeditor/: index.docbook
po/eu/: kimagemapeditor.po
po/fa/: kimagemapeditor.po
po/fi/: kimagemapeditor.po
po/fr/: kimagemapeditor.po
po/fr/docs/kimagemapeditor/: index.docbook
po/ga/: kimagemapeditor.po
po/gl/: kimagemapeditor.po
po/he/: kimagemapeditor.po
po/hi/: kimagemapeditor.po
po/hne/: kimagemapeditor.po
po/hr/: kimagemapeditor.po
po/hu/: kimagemapeditor.po
po/ia/: kimagemapeditor.po
po/it/: kimagemapeditor.po
po/it/docs/kimagemapeditor/: index.docbook
po/ja/: kimagemapeditor.po
po/ka/: kimagemapeditor.po
po/kk/: kimagemapeditor.po
po/km/: kimagemapeditor.po
po/ko/: kimagemapeditor.po
po/ko/docs/kimagemapeditor/: index.docbook
po/lt/: kimagemapeditor.po
po/lv/: kimagemapeditor.po
po/mr/: kimagemapeditor.po
po/ms/: kimagemapeditor.po
po/nb/: kimagemapeditor.po
po/nds/: kimagemapeditor.po
po/ne/: kimagemapeditor.po
po/nl/: kimagemapeditor.po
po/nl/docs/kimagemapeditor/: index.docbook
po/nn/: kimagemapeditor.po
po/oc/: kimagemapeditor.po
po/pa/: kimagemapeditor.po
po/pl/: kimagemapeditor.po
po/pl/docs/kimagemapeditor/: index.docbook
po/pt/: kimagemapeditor.po
po/pt/docs/kimagemapeditor/: index.docbook
po/pt_BR/: kimagemapeditor.po
po/pt_BR/docs/kimagemapeditor/: index.docbook
po/ro/: kimagemapeditor.po
po/ru/: kimagemapeditor.po
po/ru/docs/kimagemapeditor/: index.docbook
po/sa/: kimagemapeditor.po
po/se/: kimagemapeditor.po
po/sk/: kimagemapeditor.po
po/sl/: kimagemapeditor.po
po/sl/docs/kimagemapeditor/: index.docbook
po/sv/: kimagemapeditor.po
po/sv/docs/kimagemapeditor/: index.docbook
po/ta/: kimagemapeditor.po
po/tg/: kimagemapeditor.po
po/tr/: kimagemapeditor.po
po/ug/: kimagemapeditor.po
po/uk/: kimagemapeditor.po
po/uk/docs/kimagemapeditor/: index.docbook
po/zh_CN/: kimagemapeditor.po
po/zh_HK/: kimagemapeditor.po
po/zh_TW/: kimagemapeditor.po
