KDE_ICON = kimagemapeditor 

appicondir = $(kde_datadir)/kimagemapeditor/icons 
appicon_ICON = addpoint arrow circle circle2 freehand lower polygon raise rectangle removepoint  

picturesdir = $(kde_datadir)/kimagemapeditor
pictures_DATA = addpointcursor.png freehandcursor.png polygoncursor.png removepointcursor.png

